--- a/EmpInfo/Views/Apply/BeginApplyMQ.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplyMQ.cshtml
@@ -168,7 +168,7 @@
                         3. 组长填写的批准离职时间不能超过申请时间30天后，所以如果员工不想太快辞职，可等到意愿离职时间前30天再申请。
                     </p>
                     <p>
-                        4. 如对本流程有问题，可与行政部刘长青联系。
+                        4. 如对本流程有问题，可与行政部陈晓芳联系。
                     </p>
                 </div>
             </div>
