--- a/EmpInfo/Views/Apply/BeginAuditXAApply.cshtml
+++ b/EmpInfo/Views/Apply/BeginAuditXAApply.cshtml
@@ -595,6 +595,16 @@
                     @(m.bill.is_po==true?"是":"否")
                 </span>
             </div>
+            if (!string.IsNullOrEmpty(m.bill.po_no)) { 
+                <div class="b-div">
+                    <span class="b-label">
+                        PO单号:
+                    </span>
+                    <span class="b-input">
+                        @m.bill.po_no
+                    </span>
+                </div>
+            }
         }
         @if (m.suppliers.Count() > 0) {
             <div class="b-div">
@@ -729,6 +739,16 @@
 
                         </div>
                     }
+                    else if (bam.stepName.Contains("填写PO")) {
+                        <div class="b-div">
+                            <span class="b-label">
+                                PO号:
+                            </span>
+                            <div class="b-input">
+                                <input type="text" class="form-control" name="po_no" required />
+                            </div>
+                        </div>
+                    }
 
                     <textarea class="form-control" rows="2" name="opinion" id="opinion" placeholder="请在此处输入审核意见"></textarea>
                 </form>
@@ -777,14 +797,18 @@
             <p>
                 1. 流程步骤：流程开始--->提交申请--->收益提供人审批(如没有可跳过)--->设备科负责人审批--->生产部主管审批--->部门总经理审批--->
                 项目初审--->采购部接单--->申请人上传施工清单--->设备科负责人处理--->项目类别负责人(监控类/网络类)--->节省与监督--->采购部上传报价单--->
-                管理部会签（项目大类负责人、分摊部门总经理）--->部门总经理确认--->审核部最终确认--->申请人验收项目--->设备负责人验收--->
+                管理部会签（项目大类负责人、申请部门总经理、分摊部门总经理）--->审核部最终确认--->申请人验收项目--->设备负责人验收--->
                 生产主管验收--->部门总经理验收--->信息管理部验收（网络类）--->项目大类负责人验收--->流程结束。
-                <br />
-                2. 如果部门有设置CEO，那么部门总经理审批后，采购部接单前，系统会推送通知给CEO。
-                <br />
-                3. 申请人上传施工清单，设备科负责人处理后，采购部上传报价单前，系统会推送通知给项目大类负责人。
                 <br/>
-                4. 审核部最终确认后，申请人验收项目前，系统会推送通知给采购部接单员。
+                2. 审核部要求：2021-08-25之后提交的项目单申请，不需走验收部分审批流程，改回走纸质验收。
+                <br/>
+                3. 如果部门有设置CEO，那么部门总经理审批后，采购部接单前，系统会推送通知给CEO。
+                <br/>
+                4. 申请人上传施工清单，设备科负责人处理后，采购部上传报价单前，系统会推送通知给项目大类负责人。
+                <br/>
+                5. 审核部最终确认后，申请人验收项目前，系统会推送通知给采购部接单员。
+                <br/>
+                6. 如对此业务流程有疑问，或需要增加部门，请联系审核部陈禹健（chenyujian@trulyopto.cn）或陈俊翰（chenjunhan@trulyopto.cn）。
             </p>
         </div>
     </div>
