--- a/EmpInfo/Views/ApplyExtra/FillFxForm.cshtml
+++ b/EmpInfo/Views/ApplyExtra/FillFxForm.cshtml
@@ -353,6 +353,7 @@
             <input type="hidden" name="fx_type_name" value="@m.typeNames" />
             <input type="hidden" name="fx_process" value="@type_process" />
             <input type="hidden" name="sys_no" value="@m.sysNo" />
+            <input type="hidden" name="in_way" value="@m.inWay" />
             <div class="b-div">
                 <span class="b-label">
                     业务类型:
@@ -565,7 +566,7 @@
     </div>
 </div>
 
-<div class="panel panel-default" style="margin:16px 0;">
+<div class="panel panel-default" style="margin:16px 0 32px 0;">
     <div class="panel-body">
         <h4 class="text-danger"><i class="fa fa-info-circle"></i> 操作说明 </h4>
         <div style="margin-left:18px;padding-top:6px;" class="text-danger">
@@ -576,10 +577,13 @@
                 2. 非自提放行条流程，在物流中心审批之前，请先在此系统打印好放行条，与物品一起拿到物流中心，物流同事检查没问题之后会在系统确认审批。
             </p>
             <p>
-                3. 自提放行条流程，在流程审批完结后，可在系统打开放行二维码图片，拿给门卫扫描通过。
+                3. 自提放行条流程，在流程审批完结后，可在24小时内，打开放行二维码图片拿给门卫扫描通过，如逾期未扫码放行，需重新申请。
             </p>
             <p>
                 4. 如对业务流程有疑问，可联系营运部叶佐键或信息管理部赖吉全；如对系统或操作有疑问，可联系开发人员李逸焊。
+            </p>
+            <p>
+                5. 操作指引：<a href="~/Content/fxdoc/信利放行条操作指引.html" target="_blank">点此查看</a>
             </p>
         </div>
     </div>
