--- a/EmpInfo/Views/Home/WorkGroupIndex.cshtml
+++ b/EmpInfo/Views/Home/WorkGroupIndex.cshtml
@@ -160,6 +160,12 @@
                 </a>
             </div>
             <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=FX")">
+                    <img src="@Url.Content("~/Content/images/fx.png")" class="center-block" />
+                    <p class="text-center">放行条申请</p>
+                </a>
+            </div>
+            <div class="col-xs-4 col-sm-3 col-md-2">
                 <a href="@Url.Content("~/K3/StockBillAudit")">
                     <img src="@Url.Content("~/Content/images/paper.png")" class="center-block" />
                     <p class="text-center">会计部出库单</p>
