--- a/EmpInfo/Views/Report/SRBillReport.cshtml
+++ b/EmpInfo/Views/Report/SRBillReport.cshtml
@@ -49,8 +49,8 @@
                 toastr.info("数据正在导出，请稍等...");
                 window.location.href = "@Url.Content("~/Report/BeginExportSRBills?")"
                 + "fromDate=" + $("#fromDate").val()
-                + "&toDate=" + $("#toDate").val();
-                ;
+                + "&toDate=" + $("#toDate").val()
+                + "&exportType=" + $("#exportType").val();
             });
 
         });
@@ -74,18 +74,24 @@
             <div class="col-xs-12 col-sm-6 col-md-4">
                 <div class="input-group date form_date" style="margin:6px 0;" id="fromDatePicker1">
                     <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
-                    <input class="form-control" type="text" id="fromDate" name="fromDate" placeholder="请输入起始日期" readonly />
+                    <input class="form-control" type="text" id="fromDate" name="fromDate" placeholder="请输入起始日期" value="@DateTime.Now.ToString("yyyy-MM-dd")" readonly />
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
                 <div class="input-group date form_date" style="margin:6px 0;" id="toDatePicker1">
                     <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
-                    <input class="form-control" type="text" id="toDate" name="toDate" placeholder="请输入结束日期" readonly />
+                    <input class="form-control" type="text" id="toDate" name="toDate" placeholder="请输入结束日期" value="@DateTime.Now.ToString("yyyy-MM-dd")" readonly />
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-4">
-                <button class="btn btn-success btn-block" id="ucReportBt" data-loading-text="导出中..." style="margin:6px 0;"><i class="fa fa-file-excel-o"></i> 导出报表</button>
+                <select class="form-control" id="exportType">
+                    <option value="0" selected>只导平台未确认单</option>
+                    <option value="1">导所有单</option>
+                </select>
             </div>
+        </div>
+        <div>
+            <button class="btn btn-success btn-block" id="ucReportBt" data-loading-text="导出中..." style="margin:6px 0;"><i class="fa fa-file-excel-o"></i> 导出报表</button>
         </div>
     </div>
 </div>
